{
    "version": 1,
    "name": "LeftRightJumpSlide",
    "maps": [
        {
            "name": "Player",
            "id": "fe3dfc6a-dd57-4706-b2f0-118079bce4dc",
            "actions": [
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "b5b7711a-829a-440c-873f-116ce7e78acd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "3ab098ca-7704-4646-923a-8f05143e70ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "706c37e0-3576-4aa9-bf39-7cb24e9f1598",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f6755e-e0df-44e0-bdb2-6bb5eb4b3bf0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e14651af-5830-44aa-880e-66be625c4615",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7920561-9b6d-445b-a0b7-8eda36a18f20",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76f03926-a69e-48c1-bf4a-16a73c8ac9ab",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7c7bb8f-a2de-490f-9acb-b5ba291cbd43",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTouch",
            "id": "d8003738-461d-444f-9e26-a4eba0f8e8f7",
            "actions": [
                {
                    "name": "InitialPress",
                    "type": "Button",
                    "id": "7bf3883b-ebc9-49f8-a31a-89fffa76676a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EndOfSwipe",
                    "type": "Value",
                    "id": "915047b9-6cea-408f-bed1-53a9019b42c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0fb19280-73eb-42fa-ba47-04ac3ad49efd",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InitialPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70fe5190-689b-49c8-8cea-8b5942d00ee3",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndOfSwipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}